<resources>
    <string name="app_name">droid&amp;</string>
    <string name="email_hint">enter your email</string>
    <string name="password_hint">enter your password</string>
    <string name="login">login</string>
    <string name="imagen_logo">image logo</string>
    <string name="partida">Game</string>
    <string name="scoring">Scoring</string>
    <string name="settings">Settings</string>
    <string name="fecha">Date</string>
    <string name="monedas">Coins</string>
    <string name="estado">Estate</string>
    <string name="scoringinicial">Scoring start</string>
    <string name="scoringfinal">Scoring final</string>
    <string name="menuprincipal">Main menu</string>
    <string name="musicoff">Music Off</string>
    <string name="musicon">Music On</string>

    <string name="selectmusic">Select music</string>
    <string name="idiomas">Language</string>
    <string name="english" translatable="false">English</string>
    <string name="spanish" translatable="false">Spanish</string>
    <string name="apuesta">Bet :</string>
    <string name="paga">BLACKJACK PAYS 3 TO 2</string>
    <string name="seplanta">Dealer must stand on soft 17</string>
    <string name="carta">HIT</string>
    <string name="meplanto">STAND</string>
    <string name="borra">Delete</string>
    <string name="apostar">Bet</string>
    <string name="principal">Main</string>
    <string name="captura">Screenshot</string>    
    <string name="ayuda">Help</string>
    <string name="singingoogle">Sign in with Google</string>
    <string name="default_web_client_id" translatable="false">665682424959-pnt6e5evl4ct80ot81behtj7aardppsb.apps.googleusercontent.com</string>
    <string name="bote">JackPot</string>

</resources>