<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/inicial"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splashscreen_fondo"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_gravity="top|start"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:translationY="100dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textoScoring"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scoring"
                android:textAlignment="viewStart"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textoPuntosScoring"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:textColor="@color/dorado"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewMonedas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/monedas"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/cantidadMonedasView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="$0"
                android:textColor="@color/dorado"
                android:textSize="20sp" />
        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/logo_inicio"
        android:layout_width="64dp"
        android:layout_height="75dp"
        android:layout_gravity="top|end"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/imagen_logo"
        android:src="@drawable/logo_solo" />

    <TextView
        android:id="@+id/textoEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="27dp"
        android:gravity="top|start"
        android:text="TextView"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <Button
            android:id="@+id/button_iniciar"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:backgroundTint="@color/dorado"
            android:text="@string/partida"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button_scores"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/dorado"
            android:text="@string/scoring"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button_jackpot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/dorado"
            android:text="@string/bote"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button_settings"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/dorado"
            android:text="@string/settings"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button_ayuda"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:text="@string/ayuda"
            android:backgroundTint="@color/dorado"
            android:textSize="20sp"
            />


    </LinearLayout>

</FrameLayout>