<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/inicial"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splashscreen_fondo"
    android:paddingBottom="20dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center|center_horizontal"
        android:gravity="bottom|center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/botonMenuPrincipal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_horizontal|center_vertical"
            android:text="Menu principal"
            android:textAlignment="center" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_gravity="top|start"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:translationY="100dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:gravity="start">

            <TextView
                android:id="@+id/textoScoring"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scoring"
                android:textAlignment="viewStart"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textoPuntosScoring"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:textColor="@color/dorado"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="end">

            <TextView
                android:id="@+id/textViewMonedas2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/monedas"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/cantidadMonedasView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="$0"
                android:textColor="@color/dorado"
                android:textSize="20sp" />
        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/logo_inicio"
        android:layout_width="64dp"
        android:layout_height="75dp"
        android:layout_gravity="top|end"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/imagen_logo"
        android:src="@drawable/logo_solo" />

    <TextView
        android:id="@+id/textoEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="27dp"
        android:gravity="top|start"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textoFecha"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/fecha"
                android:textAlignment="center"
                android:textColor="@color/dorado" />

            <TextView
                android:id="@+id/textEstado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/estado"
                android:textAlignment="center"
                android:textColor="@color/dorado" />

            <TextView
                android:id="@+id/textoPInicial"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/scoringinicial"
                android:textAlignment="center"
                android:textColor="@color/dorado"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/textoPfinal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/scoringfinal"
                android:textAlignment="center"
                android:textColor="@color/dorado"
                android:textSize="12sp" />
        </LinearLayout>

        <FrameLayout
            android:layout_width="355dp"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/scoresRecView"
                android:layout_width="match_parent"
                android:layout_height="527dp">

            </androidx.recyclerview.widget.RecyclerView>
        </FrameLayout>
    </LinearLayout>

</FrameLayout>