<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/inicial"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/tapete_azul"
    tools:context=".MainActivity">

    <!-- Logo Arriba a la izquierda -->
    <ImageView
        android:id="@+id/logo"
        android:layout_width="64dp"
        android:layout_height="75dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/imagen_logo"
        android:src="@drawable/logo_solo" />

    <!-- Monedas y apuesta Arriba a la derecha -->
    <LinearLayout
        android:id="@+id/layout_saldo_monedas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="16dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textMonedas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/monedas"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:layout_marginEnd="12dp"/>

            <TextView
                android:id="@+id/textMonedasValor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="9000"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:layout_marginEnd="12dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textApuesta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:text="@string/apuesta"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textApuestaValor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:layout_marginStart="10dp"/>
        </LinearLayout>
    </LinearLayout>

    <!-- Texto Central -->
    <LinearLayout
        android:id="@+id/texto_fondo_partida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center">

        <TextView
            android:id="@+id/pays3to2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/paga"
            android:textColor="#FFFFFF"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/messageSoft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:text="@string/seplanta"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />
    </LinearLayout>

    <!-- Cartas del dealer -->
    <LinearLayout
        android:id="@+id/cartas_dealer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingHorizontal="16dp"
        app:layout_constraintBottom_toTopOf="@id/texto_fondo_partida"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="36dp" />

    <!-- Cartas del jugador -->
    <LinearLayout
        android:id="@+id/cartas_jugador"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingHorizontal="16dp"
        app:layout_constraintTop_toBottomOf="@id/texto_fondo_partida"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="106dp" />

    <!-- Botones -->
    <LinearLayout
        android:id="@+id/botones_juego"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cartas_jugador"
        android:gravity="center">

        <Button
            android:id="@+id/buttonHit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/verde"
            android:text="@string/carta" />

        <Button
            android:id="@+id/buttonStand"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:backgroundTint="@color/morado"
            android:text="@string/meplanto" />

    </LinearLayout>

    <!-- Contador del dealer -->
    <TextView
        android:id="@+id/valorDealer"
        android:layout_width="64dp"
        android:layout_height="51dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/cartas_dealer"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="60dp"
        android:background="@drawable/circlewhite"
        android:gravity="center"
        android:text="0"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/valorJugador"
        android:layout_width="64dp"
        android:layout_height="51dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cartas_jugador"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="20dp"

        android:background="@drawable/circlewhite"
        android:gravity="center"
        android:text="0"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <LinearLayout
        android:id="@+id/resultados"
        android:layout_width="match_parent"
        android:layout_height="143dp"
        app:layout_constraintTop_toBottomOf="@id/texto_fondo_partida"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:id="@+id/resultadoView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>